--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:z8uzXdpH2Qv3R5U3TbqJK68xpEbfg0LFgcM3iu+HAzE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=project-scheduling
 # DB_USERNAME=root
 # DB_PASSWORD=
 
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_CLIENT_ID="62873635019-daikl08bsecgfmh30aj89oe4k0buu16h.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_REDIRECT_URI="http://localhost:8000/auth/google/callback"
