--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ APP_KEY=base64:z8uzXdpH2Qv3R5U3TbqJK68xpEbfg0LFgcM3iu+HAzE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=id
+APP_FALLBACK_LOCALE=id
+APP_FAKER_LOCALE=id_ID
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -47,14 +47,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=teknikinformatika.uinmalang@gmail.com
+MAIL_PASSWORD="eyzn dvec jdqk npog"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=teknikinformatika.uinmalang@gmail.com
+MAIL_FROM_NAME="Admin Teknik Informatika"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
