update ACC Schedule

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME='Thesis Scheduling'
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:z8uzXdpH2Qv3R5U3TbqJK68xpEbfg0LFgcM3iu+HAzE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=id
@@ -67,3 +67,4 @@ VITE_APP_NAME="${APP_NAME}"
 GOOGLE_CLIENT_ID="62873635019-daikl08bsecgfmh30aj89oe4k0buu16h.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 GOOGLE_REDIRECT_URI="http://localhost:8000/auth/google/callback"
+
