--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Penjadwalan Sidang Akademik"
 APP_ENV=local
 APP_KEY=base64:z8uzXdpH2Qv3R5U3TbqJK68xpEbfg0LFgcM3iu+HAzE=
 APP_DEBUG=true
