--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=teknikinformatika.uinmalang@gmail.com
-MAIL_PASSWORD="eyzn dvec jdqk npog"
+MAIL_PASSWORD="obnj iuih vxep krrb"
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=teknikinformatika.uinmalang@gmail.com
 MAIL_FROM_NAME="Admin Teknik Informatika"
