--- a/.env.example
+++ b/.env.example
@@ -47,14 +47,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=teknikinformatika.uinmalang@gmail.com
-MAIL_PASSWORD="obnj iuih vxep krrb"
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=teknikinformatika.uinmalang@gmail.com
-MAIL_FROM_NAME="Admin Teknik Informatika"
+MAIL_MAILER=log
+MAIL_SCHEME=null
+MAIL_HOST=127.0.0.1
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
